Made some changes after resolving merge conflicts
Made my code compatable with the merge. Search bar still works as intended. I also created a .gitignore file to hopefully make less merge conflicts

--- a/BombasticBookstore/bombasticbookstore/templates/search_results.html
+++ b/BombasticBookstore/bombasticbookstore/templates/search_results.html
@@ -2,7 +2,8 @@
 <ul>
     {% for book in object_list %}
     <li>
-      {{ book.isbn }}, {{ book.title }}, {{ book.author }}, ${{ book.price }}
+      {{ book.isbn }}, {{ book.title }}, {{ book.f_name }}, ${{ book.l_name }}, {{ book.category }},
+       {{ book.year }}, {{ book.thumbnail }}, {{ book.quantity }}
     </li>
     {% endfor %}
 </ul>
