--- a/BombasticBookstore/bombasticbookstore/templates/index.html
+++ b/BombasticBookstore/bombasticbookstore/templates/index.html
@@ -12,7 +12,7 @@
     <nav>
         <ul>
             <li><a href="/add/">Add Item</a></li>
-            <li><a href="/remove/">Remove Item</a></li>
+            <li><a href="BombasticBookstore\bombasticbookstore\templates\remove.html">Remove Item</a></li>
             <li><a href="/edit/">Edit/Update Item</a></li>
             <li><a href="/search/">Search Items</a></li>
             <li><a href="/view_all/">View All Items</a></li>
