--- a/BombasticBookstore/bombasticbookstore/templates/index.html
+++ b/BombasticBookstore/bombasticbookstore/templates/index.html
@@ -6,7 +6,7 @@
     <title>Bombastic Bookstore Inventory Management Tool</title>
 </head>
 <body>
-
+    <h2>Welcome, {{ user.username }}!</h2>
     <h1>Main Menu</h1>
 
     <nav>
@@ -17,6 +17,8 @@
             <li><a href="/search/">Search Items</a></li>
             <li><a href="/view_all/">View All Items</a></li>
             <li><a href="/generate_report/">Generate Inventory Report</a></li>
+            <li><a href="/settings/">Settings</a></li>
+            <li><a href="{% url 'logout' %}">Sign Out</a></li>
         </ul>
     </nav>
 
