--- a/BombasticBookstore/bombasticbookstore/templates/index.html
+++ b/BombasticBookstore/bombasticbookstore/templates/index.html
@@ -21,7 +21,7 @@
 
     <nav>
         <ul>
-            <li><a href="/add/">Add Item</a></li>
+            <a href="{% url 'add_book' %}">Add Item</a>
             <li><a href="/remove/">Remove Item</a></li>
             <li><a href="/edit/">Edit/Update Item</a></li>
             <li><a href="/search/">Search Items</a></li>
