Login and signup overhaul
I created a new app to deal with accounts. Added signup feature with new html

--- a/BombasticBookstore/bombasticbookstore/templates/index.html
+++ b/BombasticBookstore/bombasticbookstore/templates/index.html
@@ -21,7 +21,7 @@
 
     <nav>
         <ul>
-            <a href="{% url 'add_book' %}">Add Item</a>
+            <li><a href="{% url 'add_book' %}">Add Item</a></li>
             <li><a href="/remove/">Remove Item</a></li>
             <li><a href="/edit/">Edit/Update Item</a></li>
             <li><a href="/search/">Search Items</a></li>
