add view all and edit pages

--- a/BombasticBookstore/bombasticbookstore/templates/index.html
+++ b/BombasticBookstore/bombasticbookstore/templates/index.html
@@ -23,7 +23,7 @@
         <ul>
             <a href="{% url 'add_book' %}">Add Item</a>
             <li><a href="/remove/">Remove Item</a></li>
-            <li><a href="/edit/">Edit/Update Item</a></li>
+            <li><a href="/adjust_qty/">Edit/Update Item</a></li>
             <li><a href="/search/">Search Items</a></li>
             <li><a href="/view_all/">View All Items</a></li>
             <li><a href="/generate_report/">Generate Inventory Report</a></li>
