--- a/BombasticBookstore/bombasticbookstore/templates/index.html
+++ b/BombasticBookstore/bombasticbookstore/templates/index.html
@@ -1,21 +1,15 @@
+{% extends "logo.html" %}
 
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<style>
-    body {
-        background-image: linear-gradient(rgba(252, 252, 252, 0.929), rgba(241, 241, 208, 0.5)),
-        url("{% static './bombasticbooks.png' %}");
-        background-size: 100% 100%;
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-    }
-</style>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bombastic Bookstore Inventory Management Tool</title>
 </head>
+{% block content %}
 <body>
     <h2>Welcome, {{ user.username }}!</h2>
 
@@ -38,4 +32,5 @@
     </nav>
 
 </body>
+{% endblock %}
 </html>
