--- a/BombasticBookstore/bombasticbookstore/templates/index.html
+++ b/BombasticBookstore/bombasticbookstore/templates/index.html
@@ -1,23 +1,28 @@
 {% extends "logo.html" %}
 
 {% load static %}
+<link rel="stylesheet" href="{% static 'bombasticbookstore/style.css' %}">
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bombastic Bookstore Inventory Management Tool</title>
 </head>
 {% block content %}
 <body>
-    <h2>Welcome, {{ user.username }}!</h2>
+	<div class="header">
+		<h2>Welcome, {{ user.username }}!</h2>
+	</div>
+	<main>
 
     <h1>Main Menu</h1>
 
     <nav>
         <ul>
             <li><a href="{% url 'add_book' %}">Add Item</a></li>
+			<li><a href="{% url 'remove_book' %}">Remove Item</a></li>
             <li><a href="/search/">Update Quantities</a></li>
             <li><a href="/search/">Search Items</a></li>
             <li><a href="/view_all/">View All Items</a></li>
