Login and home menu prototypes
Just making things look nice.

--- a/BombasticBookstore/bombasticbookstore/templates/logo.html
+++ b/BombasticBookstore/bombasticbookstore/templates/logo.html
@@ -29,9 +29,12 @@
 	  background-color: rgba(0,0,0,0.2);
 	  border-radius: 25px;
 	}
+	.login {
+	  display: flex;
+	}
 	.card-container ul {
 	  list-style: none;
-	  font-size: 24px;
+	  font-size: 18px;
 	}
 	.card-container a {
 	  text-decoration: none;
@@ -48,6 +51,7 @@
 	}
 	.card nav ul li:hover {
 	  background-color: rgba(0,0,0,0.2);
+	  border-radius: 10px;
 	}
 	/* Add some padding inside the card container */
 	.container {
