--- a/BombasticBookstore/bombasticbookstore/templates/index.html
+++ b/BombasticBookstore/bombasticbookstore/templates/index.html
@@ -23,6 +23,7 @@
         <ul>
             <li><a href="{% url 'add_book' %}">Add Item</a></li>
 			<li><a href="{% url 'remove_book' %}">Remove Item</a></li>
+			<li><a href="/edit/">Edit/Update Item</a></li>
             <li><a href="/search/">Update Quantities</a></li>
             <li><a href="/search/">Search Items</a></li>
             <li><a href="/view_all/">View All Items</a></li>
