--- a/BombasticBookstore/bombasticbookstore/templates/index.html
+++ b/BombasticBookstore/bombasticbookstore/templates/index.html
@@ -17,11 +17,8 @@
 
     <nav>
         <ul>
-            <li><a href="/add/">Add Item</a></li>
-            <li><a href="BombasticBookstore\bombasticbookstore\templates\remove.html">Remove Item</a></li>
             <li><a href="{% url 'add_book' %}">Add Item</a></li>
-            <li><a href="/remove/">Remove Item</a></li>
-            <li><a href="BombasticBookstore\bombasticbookstore\templates\remove.html">Remove Item</a></li>
+            <li><a href="{% url 'delete_item' %}">Remove Item</a></li>
             <li><a href="/edit/">Edit/Update Item</a></li>
             <li><a href="/search/">Search Items</a></li>
             <li><a href="/view_all/">View All Items</a></li>
