Chanegd font color to white

--- a/BombasticBookstore/bombasticbookstore/templates/logo.html
+++ b/BombasticBookstore/bombasticbookstore/templates/logo.html
@@ -3,6 +3,9 @@
 <html lang="en">
 <head>
 <style>
+	* {
+		color: white;
+	}
     body {
         background-image: linear-gradient(rgba(252, 252, 252, 0.929), rgba(241, 241, 208, 0.5)),
         url("{% static './bombasticbooks.png' %}");
