--- a/BombasticBookstore/bombasticbookstore/templates/registration/login.html
+++ b/BombasticBookstore/bombasticbookstore/templates/registration/login.html
@@ -6,6 +6,7 @@
     <title>Bombastic Bookstore Login Page</title>
     <style>
 		* {
+		color: white;
 		}
         body {background-color: rgba(10,10,10,1); font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif}
 		main {
