--- a/BombasticBookstore/bombasticbookstore/templates/search.html
+++ b/BombasticBookstore/bombasticbookstore/templates/search.html
@@ -5,6 +5,9 @@
     
     <title>Bombastic Bookstore Login Page</title>
 	<style>
+	* {
+	color: white;
+	}
 	main {
 	 padding: 100px;
 	 justify-content: center;
