adj qty bugfixes

--- a/BombasticBookstore/bombasticbookstore/templates/adjust_qty.html
+++ b/BombasticBookstore/bombasticbookstore/templates/adjust_qty.html
@@ -7,12 +7,13 @@
 <form action="updaterecord/{{ book.id }}" method="post">
 {% csrf_token %}
 Title:<br>
-<input name="title" value="{{ book.title }}">
+<input name="title" value="{{ book.title }}", readonly="readonly">
 <br><br>
 Quantity:<br>
 <input name="qty" value="{{ book.book_id.quantity }}">
 <br><br>
 <input type="submit" value="Submit">
 </form>
+
 
 {% endblock %}
