--- a/BombasticBookstore/bombasticbookstore/templates/search_results.html
+++ b/BombasticBookstore/bombasticbookstore/templates/search_results.html
@@ -3,7 +3,7 @@
     {% for book in object_list %}
     <li>
       {{ book.isbn10 }}, {{ book.title }}, {{ book.author_first }}, ${{ book.author_last }}, {{ book.categories }},
-       {{ book.published_year }}, {{ book.thumbnail }}, {{ book.num_pages }}
+       {{ book.published_year }}, {{ book.thumbnail }}, {{ book.num_pages }} - <a href="{% url 'adjust_qty' book.id%}">[Click to edit book ID:{{book.id}}]</a>
     </li>
     {% endfor %}
 </ul>
