--- a/BombasticBookstore/bombasticbookstore/templates/search_results.html
+++ b/BombasticBookstore/bombasticbookstore/templates/search_results.html
@@ -1,10 +1,25 @@
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 <h1>Search Results</h1>
 <ul>
     {% for book in object_list %}
-    <li>
-      {{ book.isbn10 }}, {{ book.title }}, {{ book.author_first }}, ${{ book.author_last }}, {{ book.categories }},
-       {{ book.published_year }}, {{ book.thumbnail }}, {{ book.num_pages }} - <a href="{% url 'adjust_qty' book.id%}">[Click to edit book ID:{{book.id}}]</a>
-    </li>
-    <br>
-    {% endfor %}
-</ul>
+    
+      <div class="media">
+        <img src="{{ book.thumbnail }}"  > 
+        <div class="media-body">
+        <ul>
+          <b>ISBN:</b> {{ book.isbn10 }} <br> 
+          <b>Title:</b> {{ book.title }}<br> 
+          <b>Author:</b> {{ book.author_first }} {{ book.author_last }}<br> 
+          <b>Category:</b> {{ book.categories }}<br>
+          <b>Pub year:</b> {{ book.published_year }}<br>
+          <b>Pages:</b> {{ book.num_pages }}<br>
+           <a href="{% url 'adjust_qty' book.id%}">[Click to edit book:{{book.title}}]</a>
+           <br>
+           
+        </ul>
+        </div>
+        <br>
+      </div>
+      <br>
+        {% endfor %}
+    </ul>
