--- a/BombasticBookstore/bombasticbookstore/templates/remove.html
+++ b/BombasticBookstore/bombasticbookstore/templates/remove.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-    <h1>Remove Books</h1>
-    <ul>
-        {% for book in object_list %}
-        <li>
-          {{ book.isbn }}, {{ book.title }}, {{ book.f_name }}, {{ book.l_name }}, {{ book.category }},
-          {{ book.year }}, {{ book.thumbnail }}, {{ book.quantity }}
-    
-          <a href="{% url 'delete_item' book.isbn %}" 
-             onclick="return confirm('Are you sure you want to remove this book?');">
-             Remove
-          </a>
-        </li>
-        {% endfor %}
-    </ul>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Confirm Remove Book</title>
+</head>
+<body>
+    <h1>Confirm Removal</h1>
+
+    <p>Are you sure you want to remove the book: "{{ book.title }}" by {{ book.f_name }} {{ book.l_name }}?</p>
+
+    <form action="{% url 'delete_item' book.isbn %}" method="post">
+        {% csrf_token %}
+        <button type="submit">Yes, remove</button>
+        <a href="{% url 'search_results' %}">Cancel</a> 
+    </form>
+</body>
 </html>
