--- a/BombasticBookstore/bombasticbookstore/templates/search_results.html
+++ b/BombasticBookstore/bombasticbookstore/templates/search_results.html
@@ -2,8 +2,11 @@
 <ul>
     {% for book in object_list %}
     <li>
-      {{ book.isbn }}, {{ book.title }}, {{ book.f_name }}, ${{ book.l_name }}, {{ book.category }},
-       {{ book.year }}, {{ book.thumbnail }}, {{ book.quantity }}
+        {{ book.isbn }}, {{ book.title }}, {{ book.f_name }}, {{ book.l_name }}, {{ book.category }},
+        {{ book.year }}, {{ book.thumbnail }}, {{ book.quantity }}
+
+        <a href="{% url 'confirm_remove_item' book.isbn %}" 
+           onclick="return confirm('Are you sure you want to remove this book?');">Remove</a>
     </li>
     {% endfor %}
 </ul>
