--- a/BombasticBookstore/bombasticbookstore/templates/search_results.html
+++ b/BombasticBookstore/bombasticbookstore/templates/search_results.html
@@ -1,11 +1,13 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-<h1>Search Results</h1>
+<div style="background-color:powderblue; position:sticky; top:0;">
+  <h1 align="center">Search Results</h1>
+</div>
 <br>
 <ul>
     {% for book in object_list %}
 
       <div class="media">
-        <img src="{{ book.thumbnail }}"  > 
+        <img src="{{ book.thumbnail }}" height="192px" width="128px" > 
         <div class="media-body">
         <ul>
           <b>ISBN:</b> {{ book.isbn10 }} <br> 
@@ -14,11 +16,12 @@
           <b>Category:</b> {{ book.categories }}<br>
           <b>Pub year:</b> {{ book.published_year }}<br>
           <b>Pages:</b> {{ book.num_pages }}<br>
-           <a href="{% url 'adjust_qty' book.id%}">[Click to edit quantities: {{book.title}}]</a>
+          <b>Store inventory:</b> <a href="{% url 'adjust_qty' book.id%}">{{book.book_id.quantity}}</a><br>
+           
            
            {% if book.isbn10 %}
            <a href="{% url 'confirm_remove_item' book.isbn10 %}" onclick="return confirm('Are you sure you want to remove this book?');">
-              Remove
+              <b>*Remove*</b>
            </a>
            {% else %}
            <p>ISBN not available</p>
