--- a/BombasticBookstore/bombasticbookstore/templates/index.html
+++ b/BombasticBookstore/bombasticbookstore/templates/index.html
@@ -22,7 +22,7 @@
     <nav>
         <ul>
             <li><a href="{% url 'add_book' %}">Add Item</a></li>
-			<li><a href="{% url 'remove_book' %}">Remove Item</a></li>
+			<li><a href="{% url 'remove_item_page' %}">Remove Item</a></li>
 			<li><a href="/edit/">Edit/Update Item</a></li>
             <li><a href="/search/">Update Quantities</a></li>
             <li><a href="/search/">Search Items</a></li>
