Added password reset and password changed
Added password reset to output a link via console to reset the password. Also added the ability to change your password in the user settings. Added required html pages for the password reset. They do not look the best but it all works :)

--- a/BombasticBookstore/bombasticbookstore/templates/registration/login.html
+++ b/BombasticBookstore/bombasticbookstore/templates/registration/login.html
@@ -27,5 +27,6 @@
         {% csrf_token %}
         <input type="submit" value="Sign Up">
     </form>
+    <p><a href="{% url 'password_reset' %}">Forgot your password?</a></p>
 </body>
 </html>
