--- a/BombasticBookstore/bombasticbookstore/templates/user_settings/user_settings.html
+++ b/BombasticBookstore/bombasticbookstore/templates/user_settings/user_settings.html
@@ -10,5 +10,6 @@
 		{{ form.as_p }}
 		<button type="submit">Save changes</button>
 	</form>
+	<p><a href="{% url 'password_change' %}">Change password</a></p>
 </body>
 </html>
