--- a/BombasticBookstore/bombasticbookstore/templates/add_book/add_book.html
+++ b/BombasticBookstore/bombasticbookstore/templates/add_book/add_book.html
@@ -2,14 +2,44 @@
 <html>
 <head>
     <title>Add Book</title>
+	<style>
+	* {
+	color: white;
+	}
+	main {
+	 padding: 100px;
+	 justify-content: center;
+	 position: fixed;
+	 top: 50%;
+	 left: 50%;
+	 width: 500px;
+	 transform: translate(-50%, -50%);
+	 background-color: rgba(11,11,11,1);
+	 box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+	 border-radius: 25px;
+	}
+	.container {
+		position: relative;
+		left: 20%;
+	}
+	h1 {
+		position: relative;
+		left: 10%;
+	}
+	</style>
 </head>
 <body>
-    <h1>Add a New Book</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Add Book</button>
-    </form>
-    <a href="{% url 'index' %}">Back to Index</a>
+<main>
+    
+	<div class="container">
+		<h1>Add a New Book</h1>
+		<form method="post">
+			{% csrf_token %}
+			{{ form.as_p }}
+			<button type="submit">Add Book</button>
+		</form>
+		<a href="{% url 'index' %}">Back to Index</a>
+	</div>
+</main>
 </body>
 </html>
