--- a/BombasticBookstore/bombasticbookstore/templates/search_results.html
+++ b/BombasticBookstore/bombasticbookstore/templates/search_results.html
@@ -1,4 +1,28 @@
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+
+<!DOCTYPE html>
+<html>
+<head>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+	<!-- .media{display:-ms-flexbox;display:flex;-ms-flex-align:start;align-items:flex-start} -->
+	<!-- .media-body{-ms-flex:1;flex:1} -->
+	<style>
+		.card {
+			/* Add shadows to create the "card" effect */
+			box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+			transition: 0.3s;
+			background-color: rgba(0,0,0,0.2);
+			border-radius: 25px;
+		}
+		/* On mouse-over, add a deeper shadow */
+		.card:hover {
+		background-color: white;
+		box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+		}
+	</style>
+
+</head>
+
+<body>
 <div style="background-color:powderblue; position:sticky; top:0;">
   <h1 align="center">Search Results</h1>
 </div>
@@ -6,6 +30,7 @@
 <ul>
     {% for book in object_list %}
 
+	<div class="card">
       <div class="media">
         <img src="{{ book.thumbnail }}" height="192px" width="128px" > 
         <div class="media-body">
@@ -33,6 +58,9 @@
         </div>
         <br>
       </div>
+	</div>
       <br>
         {% endfor %}
     </ul>
+</body>
+</html>
