--- a/BombasticBookstore/bombasticbookstore/templates/view_all.html
+++ b/BombasticBookstore/bombasticbookstore/templates/view_all.html
@@ -1,10 +1,31 @@
-
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+<div style="background-color:powderblue; position:sticky; top:0;">
+  <h1 align="center">All Items</h1>
+</div>
   <ul>
+    <div id="container" style=" margin:0px ; column-count:3 ;min-width: 200px; column-gap: 20px;padding:20px;">
     {% for book in books %}
-    
-      <li>
-        {{ book.title }}
-        - <a href="{% url 'adjust_qty' book.id%}">[Qty: {{book.book_id.quantity}}]</a>
-      </li>
+    <div style="padding:20px">
+      <div class="media" style="border: 1px solid;font-size: 1.8vh;padding: 10px;">
+        <br>
+        <img src="{{ book.thumbnail }}" height="192px" width="128px"> 
+        <div class="media-body">
+        <ul>
+          <b>ISBN:</b> {{ book.isbn10 }} <br> 
+          <b>Title:</b> {{ book.title }}<br> 
+          <b>Author:</b> {{ book.author_first }} {{ book.author_last }}<br> 
+          <b>Category:</b> {{ book.categories }}<br>
+          <b>Pub year:</b> {{ book.published_year }}<br>
+          <b>Pages:</b> {{ book.num_pages }}<br>
+          <b>Store inventory:</b> <a href="{% url 'adjust_qty' book.id%}">{{book.book_id.quantity}}</a><br>
+          
+        </ul>
+        </div>
+        
+      </div>
+    </div>
+    <br><br>
     {% endfor %}
+    </div>
   </ul>
+ 
