Add general.css to main page and search menu

--- a/BombasticBookstore/bombasticbookstore/templates/index.html
+++ b/BombasticBookstore/bombasticbookstore/templates/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bombastic Bookstore Inventory Management Tool</title>
+    <link rel="stylesheet" type="text/css" href="styles/general.css">
 </head>
 <body>
+    <div class="header"></div>
     <h2>Welcome, {{ user.username }}!</h2>
     <h1>Main Menu</h1>
 
