--- a/BombasticBookstore/bombasticbookstore/templates/search.html
+++ b/BombasticBookstore/bombasticbookstore/templates/search.html
@@ -1,3 +1,8 @@
+<head>
+    <title>Bombastic Bookstore Search Page</title>
+    <link rel="stylesheet" type="text/css" href="styles/general.css">
+</head>
+<div class="header"></div>
 <h1>Search Page</h1>
 
 <form action="{% url 'search_results' %}" method="get">
