--- a/BombasticBookstore/bombasticbookstore/templates/index.html
+++ b/BombasticBookstore/bombasticbookstore/templates/index.html
@@ -30,6 +30,7 @@
 				<li><a href="/generate_report/">Generate Inventory Report</a></li>
 				<li><a href="/settings/">Settings</a></li>
 				<li><a href="{% url 'logout' %}">Sign Out</a></li>
+				<li><a href="{% url 'about' %}">About Us</a></li>
 			</ul>
 		</nav>
 		</div>
