--- a/BombasticBookstore/bombasticbookstore/templates/search.html
+++ b/BombasticBookstore/bombasticbookstore/templates/search.html
@@ -42,6 +42,7 @@
 			</form>
 		</div>
 	</div> <!-- Container -->
+	<p><a href="{% url 'index' %}">Back to Main Menu</a></p>
 	</main>
 </body>
 </html>
