--- a/BombasticBookstore/bombasticbookstore/templates/user_settings/user_settings.html
+++ b/BombasticBookstore/bombasticbookstore/templates/user_settings/user_settings.html
@@ -33,6 +33,7 @@
 			<button type="submit">Save changes</button>
 		</form>
 	</div>
+	<p><a href="{% url 'index' %}">Back to Main Menu</a></p>
 </main>
 </body>
 </html>
