--- a/BombasticBookstore/bombasticbookstore/templates/view_all.html
+++ b/BombasticBookstore/bombasticbookstore/templates/view_all.html
@@ -1,6 +1,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 <div style="background-color:powderblue; position:sticky; top:0;">
   <h1 align="center">All Items</h1>
+  <p><a href="{% url 'index' %}">Back to Main Menu</a></p>
 </div>
   <ul>
     <div id="container" style=" margin:0px ; column-count:3 ;min-width: 200px; column-gap: 20px;padding:20px;">
