adding some content, to be continued

--- a/BombasticBookstore/bombasticbookstore/templates/index.html
+++ b/BombasticBookstore/bombasticbookstore/templates/index.html
@@ -34,7 +34,16 @@
 		</nav>
 		</div>
 		</div>
+		<div class="card">
+			<p>Welcome to Bombastic Bookstore Inventory Management Tool. Here, you can easily track all books within your inventory. Functionalities include (and are not limited to) adding new items, removing items, managing existing entries, and various user
+				settings. Our goal is to provide you with an intuitive and efficient web-based tool to streamline inventory management, ensuring that you always have the most accurate information at your fingertips. Navigate through the main menu to begin your 
+				journey to defining ease-of-use. 
+			</p>
+		</div>
 	</div>
+	<footer>
+        <p>&copy; 2024 Bombastic Bookstore Inventory Management Tool. All rights reserved.</p>
+    </footer>
 	</main>
 </body>
 {% endblock %}
