--- a/BombasticBookstore/bombasticbookstore/templates/view_all.html
+++ b/BombasticBookstore/bombasticbookstore/templates/view_all.html
@@ -28,4 +28,7 @@
     {% endfor %}
     </div>
   </ul>
+  <footer>
+		<p>&copy; 2024 Bombastic Bookstore Inventory Management Tool. All rights reserved.</p>
+	</footer>
  
