--- a/BombasticBookstore/bombasticbookstore/templates/adjust_qty.html
+++ b/BombasticBookstore/bombasticbookstore/templates/adjust_qty.html
@@ -14,6 +14,8 @@ Quantity:<br>
 <br><br>
 <input type="submit" value="Submit">
 </form>
-
+<footer>
+    <p>&copy; 2024 Bombastic Bookstore Inventory Management Tool. All rights reserved.</p>
+</footer>
 
 {% endblock %}
