--- a/BombasticBookstore/bombasticbookstore/templates/remove_confirmation.html
+++ b/BombasticBookstore/bombasticbookstore/templates/remove_confirmation.html
@@ -24,4 +24,7 @@
         <a href="{% url 'index' %}">Cancel</a>
     </form>
 </body>
+<footer>
+    <p>&copy; 2024 Bombastic Bookstore Inventory Management Tool. All rights reserved.</p>
+</footer>
 </html>
