--- a/BombasticBookstore/bombasticbookstore/templates/search_results.html
+++ b/BombasticBookstore/bombasticbookstore/templates/search_results.html
@@ -62,5 +62,8 @@
       <br>
         {% endfor %}
     </ul>
+    <footer>
+      <p>&copy; 2024 Bombastic Bookstore Inventory Management Tool. All rights reserved.</p>
+    </footer>
 </body>
 </html>
