--- a/BombasticBookstore/bombasticbookstore/templates/view_all.html
+++ b/BombasticBookstore/bombasticbookstore/templates/view_all.html
@@ -47,7 +47,7 @@
     </div></div>
     </form>
 
-    <div align="center">Filtered by:  <b>{{flag}},  {{instock}}</b></div>
+    <div align="center">Filtered by:  <b>{{flagcat}},{{flagauth}},  {{instock}}</b></div>
     <ul>
     <div id="container" style=" margin:0px ; column-count:3 ;min-width: 180px; column-gap: 20px;padding:20px;break-inside: avoid;">
         {% for book in queryset %}
