--- a/BombasticBookstore/bombasticbookstore/templates/view_all.html
+++ b/BombasticBookstore/bombasticbookstore/templates/view_all.html
@@ -24,7 +24,7 @@
         {% endfor %}
         </select> 
     </div>
-    <div class="form-group col-sm-2"><div style="position: absolute;top:35%;left:50%"><b>OR</b></div></div>
+    <div class="form-group col-sm-2"><div style="position: absolute;top:35%;left:50%"></div></div>
     <div class="form-group col-md-2">
         <label for="author"><em>Author</em></label>
         <select id="author" class="form-control" name="author">
