--- a/BombasticBookstore/bombasticbookstore/templates/registration/login.html
+++ b/BombasticBookstore/bombasticbookstore/templates/registration/login.html
@@ -4,8 +4,12 @@
 <head>
     
     <title>Bombastic Bookstore Login Page</title>
-    <style>
-		* {
+
+	<link rel="stylesheet" type="text/css" href="styles/general.css">
+	<link rel="stylesheet" type="text/css" href="styles/login.css">`
+
+    <!-- <style>
+		*{
 		color: white;
 		}
         body {background-color: rgba(10,10,10,1); font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif}
@@ -70,7 +74,7 @@
 		.toggle-checkbox:checked ~ .slider > .toggle-switch.opt2 {
 		  display: inline;
 		}
-    </style>
+    </style> -->
 	<script>
 		window.addEventListener("DOMContentLoaded", (event) => {
 			var toggle = document.getElementById("toggle");
