--- a/BombasticBookstore/bombasticbookstore/templates/styles/general.css
+++ b/BombasticBookstore/bombasticbookstore/templates/styles/general.css
@@ -1,17 +1,30 @@
-body {
-    margin: 0;
-    padding-top: 50px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-
+* {
+  color: white;
+  }
+      
+  body {background-color: rgba(10,10,10,1); font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif}
+  
+  main {
+   padding: 100px;
+   justify-content: center;
+   position: fixed;
+   top: 50%;
+   left: 50%;
+   width: 500px;
+   transform: translate(-50%, -50%);
+   background-color: rgba(11,11,11,1);
+   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+   border-radius: 25px;
   }
 
-.header {
-    height: 55px;
-    
-    text-align: center;
-    
-    background-color: white;
-    border-bottom-width: 1px;
-    border-bottom-style: solid;
-    border-bottom-color: rgb(230, 230, 230);
-}
+  .card {
+    /* Add shadows to create the "card" effect */
+    padding: 25px;
+    display: inline;
+    justify-content: center;
+    flex-wrap: wrap;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    background-color: rgba(0,0,0,0.2);
+    border-radius: 25px;
+  }
