--- a/BombasticBookstore/bombasticbookstore/templates/registration/login.html
+++ b/BombasticBookstore/bombasticbookstore/templates/registration/login.html
@@ -5,8 +5,8 @@
     
     <title>Bombastic Bookstore Login Page</title>
 
-	<link rel="stylesheet" type="text/css" href="styles/general.css">
-	<link rel="stylesheet" type="text/css" href="styles/login.css">`
+	<link rel="stylesheet"  href="styles/general.css">
+	<link rel="stylesheet"  href="styles/login.css">`
 
     <!-- <style>
 		*{
