--- a/BombasticBookstore/bombasticbookstore/templates/registration/login.html
+++ b/BombasticBookstore/bombasticbookstore/templates/registration/login.html
@@ -1,3 +1,4 @@
+{% load static %}
 
 <!DOCTYPE html>
 <html>
@@ -5,8 +6,7 @@
     
     <title>Bombastic Bookstore Login Page</title>
 
-	<link rel="stylesheet"  href="styles/general.css">
-	<link rel="stylesheet"  href="styles/login.css">`
+	<link rel="stylesheet"  href="{% static 'styles/login.css' %}">
 
     <!-- <style>
 		*{
