--- a/BombasticBookstore/bombasticbookstore/templates/styles/login.css
+++ b/BombasticBookstore/bombasticbookstore/templates/styles/login.css
@@ -1,3 +1,41 @@
+* 
+{
+color: white;
+    
+}
+        
+body 
+{
+    background-color: rgba(10,10,10,1); font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+}
+    
+main 
+{
+    padding: 100px;
+    justify-content: center;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 500px;
+    transform: translate(-50%, -50%);
+    background-color: rgba(11,11,11,1);
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    border-radius: 25px;
+}
+  
+.card 
+{
+  /* Add shadows to create the "card" effect */
+    padding: 25px;
+    display: inline;
+    justify-content: center;
+    flex-wrap: wrap;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    background-color: rgba(0,0,0,0.2);
+    border-radius: 25px;
+}
+
 .flex-parent 
 {
     display: inline;
@@ -10,7 +48,7 @@
 }
 
 /* toggle styling starts here */
-		/* hide the "default" checkbox/appearance */
+/* hide the "default" checkbox/appearance */
 .toggle-checkbox 
 {
     display: none;
