--- a/BombasticBookstore/bombasticbookstore/templates/add_book/add_book.html
+++ b/BombasticBookstore/bombasticbookstore/templates/add_book/add_book.html
@@ -1,36 +1,16 @@
+{% extends 'base.html' %}
+
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
     <title>Add Book</title>
-	<style>
-	* {
-	color: white;
-	}
-	main {
-	 padding: 100px;
-	 justify-content: center;
-	 position: fixed;
-	 top: 50%;
-	 left: 50%;
-	 width: 500px;
-	 transform: translate(-50%, -50%);
-	 background-color: rgba(11,11,11,1);
-	 box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-	 border-radius: 25px;
-	}
-	.container {
-		position: relative;
-		left: 20%;
-	}
-	h1 {
-		position: relative;
-		left: 10%;
-	}
-	</style>
+	<link rel="stylesheet" href="{% static 'styles/theme.css' %}">
+	<script src="{% static 'js/theme.js' %}" defer></script>
 </head>
 <body>
-<main>
-    
+{% block content %}
+<main>  
 	<div class="container">
 		<h1>Add a New Book</h1>
 		<form method="post">
@@ -41,5 +21,6 @@
 		<p><a href="{% url 'index' %}">Back to Main Menu</a></p>
 	</div>
 </main>
+{% endblock %}
 </body>
 </html>
