--- a/BombasticBookstore/bombasticbookstore/templates/adjust_qty.html
+++ b/BombasticBookstore/bombasticbookstore/templates/adjust_qty.html
@@ -1,19 +1,20 @@
 {% extends "logo.html" %}
 
-<h1>Update book</h1>
 
 {% block content %}
-
-<form action="updaterecord/{{ book.id }}" method="post">
-{% csrf_token %}
-Title:<br>
-<input name="title" value="{{ book.title }}", readonly="readonly">
-<br><br>
-Quantity:<br>
-<input name="qty" value="{{ book.book_id.quantity }}">
-<br><br>
-<input type="submit" value="Submit">
-</form>
-
-
+<main>
+    <h1 class="title">Update book</h1>
+    <div class="card">    
+        <form action="updaterecord/{{ book.id }}" method="post">
+        {% csrf_token %}
+        Title:<br>
+        <input name="title" value="{{ book.title }}", readonly="readonly">
+        <br><br>
+        Quantity:<br>
+        <input name="qty" value="{{ book.book_id.quantity }}">
+        <br><br>
+        <input type="submit" value="Submit">
+    </form>
+    </div>
+</main>
 {% endblock %}
