--- a/BombasticBookstore/bombasticbookstore/templates/index.html
+++ b/BombasticBookstore/bombasticbookstore/templates/index.html
@@ -8,15 +8,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bombastic Bookstore Inventory Management Tool</title>
-	
 </head>
 {% block content %}
 <body>
 	<header>
-		<h2>Welcome, {{ user.username }}!</h2>
+      <div class="left-section">
+        <img class="bomb-logo" src='{% static "./bomb4.png" %}'>
+      </div>
+      <div class="middle-section">
+        <p>Bombastic Bookstore</p>
+      </div>
+      <div class="right-section">
+        <p>Welcome, {{ user.username }}!</p>
+      </div>
 	</header>
-	<main>
-
+  <nav class="nav-bar">
+    <ul>
+      <li><a href="{% url 'add_book' %}">Add Item</a></li>
+      <li><a href="/search/">Update Quantities</a></li>
+      <li><a href="/search/">Search Items</a></li>
+      <li><a href="/view_all/">View All Items</a></li>
+      <li><a href="/generate_report/">Generate Inventory Report</a></li>
+      <li><a href="/settings/">Settings</a></li>
+      <li><a href="{% url 'logout' %}">Sign Out</a></li>
+      <li><a href="{% url 'about' %}">About Us</a></li>
+    </ul>
+  </nav>
+<!---
 	<div class="card-container">
 		<h1>Main Menu</h1>
 
@@ -32,11 +50,11 @@
 				<li><a href="{% url 'logout' %}">Sign Out</a></li>
 				<li><a href="{% url 'about' %}">About Us</a></li>
 			</ul>
-		</nav>
+		</nav>-->
 		</div>
 		</div>
 	</div>
 	</main>
 </body>
-{% endblock %}
 </html>
+{% endblock %}
