--- a/BombasticBookstore/bombasticbookstore/templates/view_all.html
+++ b/BombasticBookstore/bombasticbookstore/templates/view_all.html
@@ -13,9 +13,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   </head>
+  {% block content %}
   <body>
     <div class="header">
-    <h1 align="center">Store Inventory</h1>
+    <h1 class="title">Store Inventory</h1>
     <form method="GET" action=".">
     <div class="row justify-content-center">
     <div class="form-group col-md-2">
@@ -77,3 +78,6 @@
         </div>
         </ul>
     </div>
+  </body>
+  {% endblock %}
+</html>
