--- a/BombasticBookstore/bombasticbookstore/static/styles/general.css
+++ b/BombasticBookstore/bombasticbookstore/static/styles/general.css
@@ -7,7 +7,7 @@ main {
   position: fixed;
   top: 50%;
   left: 50%;
-  width: 500px;
+  width: 1000px;
   transform: translate(-50%, -50%);
   background-color: rgba(11,11,11,1);
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -28,7 +28,9 @@ main {
   border-radius: 25px;
 }
 
-
+.search {
+	width: 100%;
+}
 
 .title {
   margin-bottom: 20px; /* Space between title and card */
@@ -39,63 +41,19 @@ main {
 }
 
 .container {
-		position: relative;
-		left: 20%;
-	}
-
-	h1 {
-		position: relative;
-		left: 10%;
-	}
-
-	
-
-/* Header Styling */
-header {
-height: 100px;
-
-display: flex;
-flex-direction: row;
-justify-content: space-between;
-top: 0;
-left: 0;
-right: 0;
-
-position: fixed;
-
-background-color: white;
-border-bottom-width: 1px;
-border-bottom-style: solid;
-border-bottom-color: rgb(230, 230, 230);
+	position: relative;
 }
 
-.left-section {
-display: flex;
-align-items: center;
+h1 {
+	position: relative;
+	/* left: 10%; */
 }
+
 
 .bomb-logo {
 height: 100px;
 }
 
-.middle-section {
-flex: 1;
-margin-left: 70px;
-margin-right: 35px;
-max-width: 150px;
-display: flex;
-align-items: center;
-}
-
-
-.right-section {
-width: 180px;
-margin-right: 20px;
-display: flex;
-align-items: center;
-justify-content: space-between;
-flex-shrink: 0;
-}
 
 /* Navigation Styling */
 .nav-bar {
@@ -104,8 +62,17 @@ background-color: black;
 padding: 10px 0;
 text-align: center;
 }
-.nav-bar ul {
+
+ul {
 list-style: none;
+}
+
+ul li {
+	padding: 0px;
+	margin: 0px;
+}
+
+.nav-bar ul {
 display: flex;
 justify-content: center;
 }
