--- a/BombasticBookstore/bombasticbookstore/static/styles/header.css
+++ b/BombasticBookstore/bombasticbookstore/static/styles/header.css
@@ -1,13 +1,11 @@
 .header {
-    background-color:powderblue; 
-    position:sticky; 
-    top:0;
+    background-color: powderblue;
+	padding: 25px;
 }
 
 /* Header Styling */
 header {
-  height: 100px;
-  
+  z-index: 9;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -17,37 +15,47 @@ header {
   
   position: fixed;
   
+  color: black;
   background-color: white;
   border-bottom-width: 1px;
   border-bottom-style: solid;
   border-bottom-color: rgb(230, 230, 230);
-  }
+}
   
-  .left-section {
+.top-section {
+	display: block;
+}
+
+.bottom-section {
+	display: block;
+	top:50%;
+}
+
+.left-section {
   display: flex;
   align-items: center;
-  }
+}
   
-  .bomb-logo {
+.bomb-logo {
   height: 100px;
-  }
-  
-  .middle-section {
+}
+ 
+.middle-section {
   flex: 1;
   margin-left: 70px;
   margin-right: 35px;
   max-width: 150px;
   display: flex;
   align-items: center;
-  }
+}
   
   
-  .right-section {
+.right-section {
   width: 180px;
   margin-right: 20px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   flex-shrink: 0;
-  }
+}
   
