--- a/BombasticBookstore/bombasticbookstore/templates/logo.html
+++ b/BombasticBookstore/bombasticbookstore/templates/logo.html
@@ -1,36 +1,52 @@
+
+
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Bombastic Bookstore{% endblock %}</title>
-		<link rel="stylesheet" href="{% static 'styles/theme.css' %}">
+	<link rel="stylesheet" href="{% static 'styles/theme.css' %}">
     <link rel="stylesheet" href="{% static 'js/theme.js' %}" defer>
     <link rel="stylesheet" href="{% static 'styles/general.css' %}">
-</head>
-<style>
-	body{
+    <link rel="stylesheet" href="{% static 'styles/header.css' %}">
+	<style>
+		body {
 			background-image: linear-gradient(rgba(252, 252, 252, 0.929), rgba(241, 241, 208, 0.5)),
 			url("{% static './bombasticbooks.png' %}");
 			background-size: 100% 100%;
 			background-repeat: no-repeat;
 			background-attachment: fixed;
 		}
-</style>
+	</style>
+</head>
 <body>
-<header>
-    <div class="left-section">
-        <img class="bomb-logo" src='{% static "./bomb4.png" %}' alt="Bombastic Bookstore Logo">
-    </div>
-    <div class="middle-section">
-        <p>Bombastic Bookstore</p>
-    </div>
-    <div class="right-section">
-        <p>Welcome, {{ user.username }}!</p>
-    </div>
-</header>
-
+	<header>
+		<div class="left-section">
+			<img class="bomb-logo" src='{% static "./bomb4.png" %}' alt="Bombastic Bookstore Logo">
+		</div>
+		<div class="middle-section">
+			<p>Bombastic Bookstore</p>
+		</div>
+		<div class="right-section">
+			<p>Welcome, {{ user.username }}!</p>
+		</div>
+	</header>
+	  <nav class="nav-bar">
+		<ul>
+		<li><a href="{% url 'index' %}">Main</a></li>
+		  <li><a href="{% url 'add_book' %}">Add Item</a></li>
+		  <!-- <li><a href="/search/">Update Quantities</a></li> -->
+		  <li><a href="/search/">Search Items</a></li>
+		  <li><a href="/view_all/">View All Items</a></li>
+		  <li><a href="/generate_report/">Generate Inventory Report</a></li>
+		  <li><a href="/settings/">Settings</a></li>
+		  <li><a href="{% url 'logout' %}">Sign Out</a></li>
+		  <li><a href="{% url 'about' %}">About Us</a></li>
+		</ul>
+	  </nav>
 {% block content %}
 {% endblock %}
 </body>
