--- a/BombasticBookstore/bombasticbookstore/templates/search.html
+++ b/BombasticBookstore/bombasticbookstore/templates/search.html
@@ -1,5 +1,9 @@
+{% extends "logo.html" %}
+
 {% load static %}
+
 <!DOCTYPE html>
+
 <html>
 <head>
     
@@ -8,6 +12,7 @@
 	<link rel="stylesheet" href="{% static 'styles/theme.css' %}">
 	<script src="{% static 'js/theme.js' %}" defer></script>
 </head>
+{% block content %}
 <body>
 	<main>
 	<div class="card">
@@ -18,7 +23,7 @@
 			</form>
 		</div>
 	</div> <!-- Container -->
-	<p><a href="{% url 'index' %}">Back to Main Menu</a></p>
 	</main>
 </body>
 </html>
+{% endblock %}
