--- a/BombasticBookstore/bombasticbookstore/templates/search_results.html
+++ b/BombasticBookstore/bombasticbookstore/templates/search_results.html
@@ -20,7 +20,7 @@
 <br>
 <ul>
     {% for book in object_list %}
-<div>
+<div class="container">
 	<div class="search-card">
       <div class="media">
         <img src="{{ book.thumbnail }}" height="192px" width="128px" > 
