--- a/BombasticBookstore/bombasticbookstore/static/styles/general.css
+++ b/BombasticBookstore/bombasticbookstore/static/styles/general.css
@@ -5,9 +5,10 @@ main {
   justify-content: center;
   align-items: center;
   position: fixed;
+  margin-top: 200px;
   top: 50%;
   left: 50%;
-  width: 500px;
+  width: 400px;
   transform: translate(-50%, -50%);
   background-color: rgba(11,11,11,1);
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
