--- a/BombasticBookstore/bombasticbookstore/templates/logo.html
+++ b/BombasticBookstore/bombasticbookstore/templates/logo.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="{% static 'styles/header.css' %}">
 	<style>
 		body {
-			background-image: linear-gradient(rgba(252, 252, 252, 0.929), rgba(241, 241, 208, 0.5)),
-			url("{% static './bombasticbooks.png' %}");
+			background-image: linear-gradient(rgba(252, 252, 252, 0.929), rgba(241, 241, 208, 0.685)),
+			url("{% static './books.png' %}");
 			background-size: 100% 100%;
 			background-repeat: no-repeat;
 			background-attachment: fixed;
